use protocol mappers